--- a/css/tablet.css
+++ b/css/tablet.css
@@ -9,6 +9,7 @@
 
 .container {
   width: 100%;
+  overflow: hidden;
 }
 
 .logo-size {
@@ -483,6 +484,7 @@ article div.iterations {
   text-align: center;
   margin-top: 0;
   margin-left: .5rem;
+  font-family: "Brandon Text Bold";
 }
 
 section.it-snippet {
@@ -529,12 +531,12 @@ section.third img.last {
 .number-circle {
   background-color: #6534FF;
   border-radius: 50%;
-  padding-top: 1.5rem;
+  padding-top: 1.3rem;
   color: #FFFDFB;
-  width: 3rem;
-  height: 3rem;
+  width: 2.5rem;
+  height: 2.5rem;
   font-family: 'Brandon Text Medium', sans-serif;
-  font-size: 1.9rem;
+  font-size: 1.8rem;
   margin-top: 0;
 }
 
@@ -868,6 +870,7 @@ header.iteration-title {
   padding: 0.5rem 0.5rem;
   display: block;
   text-align: left;
+  font-family: "Brandon Text Medium";
 }
 
 header.iteration-title span {
@@ -1073,7 +1076,7 @@ div.desktop-images-final {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-top: -210rem;
+  margin-top: -208rem;
   z-index: 1000;
 }
 
@@ -1105,6 +1108,7 @@ div.CTA-buttons {
 
 div.key-learnings .concl-heading {
   font-size: 2.3rem;
+    line-height: 100%;
   margin-top: 3rem;
 }
 
@@ -1130,29 +1134,28 @@ div.key-learnings .concl-sub {
 
 .contact-box {
   width: 100%;
-  height: 100%;
+  padding: 7.5rem 0;
 }
 
 div.contact-box img.right-side{
-  width: 27%;
+  width: 50%;
   display: block;
   position: relative;
-  top: 1rem;
-  left: 22.5rem;
+  top: -3rem;
+  left: 16rem;
   z-index: 1;
 }
 
 .contact-copy  {
-  text-align: center;
-  position: relative;
-  top: 0rem;
+  text-align: left;
+  margin-top: -8rem;
   z-index: 1000;
 }
 
 .contact-title {
   font-size: 3.5rem;
-  text-align: center;
-  /* margin-bottom: -7rem; */
+  width: 60%;
+  margin-left: 8rem;
   font-family: 'Brandon Text Bold';
   line-height: 100%;
   color: #FFA856;
@@ -1160,11 +1163,11 @@ div.contact-box img.right-side{
 
 h5.contact-text {
   font-size: 2.3rem;
-  text-align: center;
   line-height: 120%;
   padding-bottom: 1rem;
   margin: 0 auto;
-  width: 85%;
+  margin-left: 8rem;
+  width: 80%;
   color: #FFA856;
 }
 
